--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -285,42 +285,42 @@
         <div class="product-grid">
             <div class="product-card">
                 <a href="kids_product1.html">
-                    <img src="product1.jpg" alt="Adidas Lilo & Stitch T-Shirt">
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/0595399a-68d1-42ce-94fb-3b5ffa050dc2/CBF+Y+NK+DF+STAD+JSY+SS+HM.png" alt="Adidas Lilo & Stitch T-Shirt">
                     <h3>Nike Kid's Brazil Fifa T-Shirt</h3>
                 </a>
                 <p>₹3,599</p>
             </div>
             <div class="product-card">
                 <a href="kids_product2.html">
-                    <img src="product2.jpg" alt="Essentials Allover Prnt Jogger Set">
+                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/ba14eb8bc02f4013b47932f27fa619c2_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_01_laydown.jpg" alt="Essentials Allover Prnt Jogger Set">
                     <h3>Essentials Allover Prnt Jogger Set</h3>
                 </a>
                 <p>₹1,299</p>
             </div>
             <div class="product-card">
                 <a href="kids_product3.html">
-                    <img src="product3.jpg" alt="Disney Mickey Mouse Tee Set">
+                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/d85bb8c107ff4bca8b312bbe1e11e376_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_03_laydown_hover.jpg" alt="Disney Mickey Mouse Tee Set">
                     <h3>Disney Mickey Mouse Tee Set</h3>
                 </a>
                 <p>₹3,999</p>
             </div>
             <div class="product-card">
                 <a href="kids_product4.html">
-                    <img src="product4.jpg" alt="Lil Nigga Joggers Set">
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/e4753277-a386-41d1-86b7-7e54dd403170/KOR+Y+NK+DF+STAD+JSY+SS+HM.png" alt="Lil Nigga Joggers Set">
                     <h3>Older Kids' Nike Dri-FIT Football Replica Shirt</h3>
                 </a>
                 <p>₹4,799</p>
             </div>
             <div class="product-card">
                 <a href="kids_product5.html">
-                    <img src="product5.jpg" alt="Marvel Spider-Man T-Shirt">
+                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/a99f066d781a463e934f394c4833ad4e_9366/ADIDAS_MARVEL_SPIDER-MAN_T-SHIRT_Red_JF3654_25_model.jpg" alt="Marvel Spider-Man T-Shirt">
                     <h3>Marvel Spider-Man T-Shirt</h3>
                 </a>
                 <p>₹1,499</p>
             </div>
             <div class="product-card">
                 <a href="kids_product6.html">
-                    <img src="product6.jpg" alt="Lil MethHead Shoes">
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/c33e35bc-607d-4f6b-8418-5fcbf0e173bb/KM+K+NK+CLUB+FLC+HDY+-PD.png" alt="Lil MethHead Shoes">
                     <h3>Older Kids' Football Hoodie</h3>
                 </a>
                 <p>₹ 2995.00</p>
