--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -327,22 +327,22 @@
             </div>
             <div class="product-card">
                 <a href="kids_product7.html">
-                    <img src="product7.jpg" alt="Adidas Child Predators Shoes">
-                    <h3>Adidas Child Predators Shoes</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/afc750e6-3f8a-4e27-9f91-4bd878b62502/K+NSW+TEE+TD+BOBA.png" alt="Adidas Child Predators Shoes">
+                    <h3>Older Kids' T-Shirt</h3>
                 </a>
                 <p>₹4,299</p>
             </div>
             <div class="product-card">
                 <a href="kids_product8.html">
-                    <img src="product8.jpg" alt="Adidas Samba OG Shoes Kids">
-                    <h3>Adidas Samba OG Shoes Kids</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/6d5392bf-16e2-4ad9-9d1b-92de83c71caf/G+NSW+JKT+DANCE+-PD.png" alt="Adidas Samba OG Shoes Kids">
+                    <h3>Girls' Jacket</h3>
                 </a>
                 <p>₹6,799</p>
             </div>
             <div class="product-card">
                 <a href="kids_product9.html">
-                    <img src="product9.jpg" alt="F50 League Firm/Multi-Ground Cleats Kids">
-                    <h3>F50 League Firm/Multi-Ground Cleats Kids</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/72d7d383-af8c-4015-a5ad-fc01253aeb04/K+NK+DF+TRPHY23+SHORT+GX.png" alt="F50 League Firm/Multi-Ground Cleats Kids">
+                    <h3>Older Kids' Dri-FIT Shorts</h3>
                 </a>
                 <p>₹3,499</p>
             </div>
