--- a/kids_product7.html
+++ b/kids_product7.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kids Clothing</title>
+  <title>Older Kids' T-Shirt</title>
   <style>
     html, body {
       margin: 0;
@@ -364,21 +364,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/0595399a-68d1-42ce-94fb-3b5ffa050dc2/CBF+Y+NK+DF+STAD+JSY+SS+HM.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/afc750e6-3f8a-4e27-9f91-4bd878b62502/K+NSW+TEE+TD+BOBA.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/0595399a-68d1-42ce-94fb-3b5ffa050dc2/CBF+Y+NK+DF+STAD+JSY+SS+HM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/afc750e6-3f8a-4e27-9f91-4bd878b62502/K+NSW+TEE+TD+BOBA.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/a79e086c-5227-4098-804a-f69e85dc52bf/K+NSW+TEE+TD+BOBA.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d620a178-3248-48d4-9ce5-29abbfa9cc0c/K+NSW+TEE+TD+BOBA.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/e9e645e9-97ab-4549-a774-72d818b794fa/K+NSW+TEE+TD+BOBA.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Kid's Brazil Fifa T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Older Kids' T-Shirt</h1>
+        <h2>₹ 1495.00</h2>
 
-        <p><strong>Description:</strong> The Nike Fifa T-shirt series brings home the feel of a true jersey from your favorite football teams. The t-shirt is made of polyster and cotton </p>
+        <p><strong>Description:</strong> Keep it classic with the Older Kids' T-Shirt, made from soft, breathable fabric for all-day comfort and easy movement. Its versatile style makes it a go-to favorite for school, play, and everything in between. </p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +388,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="207" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="207" data-name="Older Kids' T-Shirt" data-price="1495.00">
   		        Add to Bag
 	        </button>
         </div>
