--- a/kids_product9.html
+++ b/kids_product9.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kids Clothing</title>
+  <title>Older Kids' Dri-FIT Shorts</title>
   <style>
     html, body {
       margin: 0;
@@ -364,21 +364,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/0595399a-68d1-42ce-94fb-3b5ffa050dc2/CBF+Y+NK+DF+STAD+JSY+SS+HM.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/72d7d383-af8c-4015-a5ad-fc01253aeb04/K+NK+DF+TRPHY23+SHORT+GX.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/0595399a-68d1-42ce-94fb-3b5ffa050dc2/CBF+Y+NK+DF+STAD+JSY+SS+HM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/72d7d383-af8c-4015-a5ad-fc01253aeb04/K+NK+DF+TRPHY23+SHORT+GX.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b12849b7-760f-46ca-9556-a91e8c52bdce/K+NK+DF+TRPHY23+SHORT+GX.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/8bd762ec-0c51-4bb6-a6d4-a8326fa717ee/K+NK+DF+TRPHY23+SHORT+GX.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/dea6f288-ad53-42d8-bcda-fd65cf986105/K+NK+DF+TRPHY23+SHORT+GX.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Kid's Brazil Fifa T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Older Kids' Dri-FIT Shorts</h1>
+        <h2>₹ 1295.00</h2>
 
-        <p><strong>Description:</strong> The Nike Fifa T-shirt series brings home the feel of a true jersey from your favorite football teams. The t-shirt is made of polyster and cotton </p>
+        <p><strong>Description:</strong> Keep them cool and active in the Older Kids' Dri-FIT Shorts, featuring sweat-wicking fabric for dry, breathable comfort. With a flexible fit and sporty style, they’re perfect for training, play, or everyday wear. </p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +388,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="209" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="209" data-name="Older Kids' Dri-FIT Shorts" data-price="1295.00">
   		        Add to Bag
 	        </button>
         </div>
