--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -293,7 +293,7 @@
             <div class="product-card">
                 <a href="kids_product2.html">
                     <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/ba14eb8bc02f4013b47932f27fa619c2_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_01_laydown.jpg" alt="Essentials Allover Prnt Jogger Set">
-                    <h3>Essentials Allover Prnt Jogger Set</h3>
+                    <h3>Essentials Allover Print Jogger Set</h3>
                 </a>
                 <p>₹1,299</p>
             </div>
