--- a/kids_product1.html
+++ b/kids_product1.html
@@ -5,119 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nike Kid's Brazil Fifa T-Shirt</title>
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
-      background: white;
-    }
+    html,body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #000;
+        }
 
-    .header {
-      background-color: #000;
-      color: #fff;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .header a {
-        color: #fff;
-        text-decoration: none;
-        margin: 0 10px;
-    }
-
-    .header a:hover {
-        text-decoration: underline;
-    } 
-
-    .header {
+        .header {
+            background-color: #000;
+            color: #fff;
+            padding: 10px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #000000;
-            padding: 10px 20px;
             border-bottom: 1px solid #ccc;
         }
 
-    .notification {
-        position: relative;
-    }
+        .header-left {
+            display: flex;
+            align-items: center;
+            gap: 550px;
+        }
 
-    .notification-badge {
-        position: absolute;
-        top: -5px;
-        right: -5px;
-        background-color: yellow;
-        border-radius: 50%;
-        padding: 2px 5px;
-        font-size: 12px;
-    }
+        .logo img {
+            height: 30px;
+        }
 
-    .help-signup {
-        display: flex;
-        gap: 15px;
-        font-size: 0.9em;
-    }
+        .nav-menu {
+            display: flex;
+            gap: 25px;
+            font-size: 1.3em;
+            align-items: center;
+        }
 
-    .help-signup a {
-        text-decoration: none;
-        color: #ffffff;
-    }
+        .nav-menu a {
+            text-decoration: none;
+            color: #ffffff;
+            font-weight: bold;
+            align-items: center;
+        }
 
-    .help-signup a:hover {
-        text-decoration: underline;
-    }
+        .help-signup {
+            display: flex;
+            gap: 20px;
+            font-size: 1.3em;
+        }
 
-    .logo img {
-        height: 30px;
-    }
+        .help-signup a {
+            text-decoration: none;
+            color: #ffffff;
+        }
 
-    .nav-menu {
-        display: flex;
-        gap: 20px;
-    }
-
-    .nav-menu a {
-        text-decoration: none;
-        color: #ffffff;
-        font-weight: bold;
-    }
-
-    .search-bar {
-        display: flex;
-        align-items: center;
-        border: 1px solid #ccc;
-        padding: 5px;
-        border-radius: 5px;
-    }
-
-    .search-bar input {
-        border: none;
-        outline: none;
-    }
-
-    .icons {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-    }
-
-    .notification {
-        position: relative;
-    }
-
-    .notification-badge {
-        position: absolute;
-        top: -5px;
-        right: -5px;
-        background-color: yellow;
-        border-radius: 50%;
-        padding: 2px 5px;
-        font-size: 12px;
-    }
-
+        .help-signup a:hover {
+            text-decoration: underline;
+        }
     .container {
       width: 100%;
       min-height: 100vh;
@@ -257,72 +198,111 @@
       margin-bottom: 12px;
       font-style: italic;
     }
+.promo-banner {
+            background-color: #F7E146;
+            color: #000;
+            padding: 20px 0;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        .promo-banner button {
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+        }
 
     footer {
-      background-color: #000;
-      color: #ccc;
-      margin-top: 50px;
-    }
+            background-color: #000;
+            text-align: center;
+        }
 
-    .promo-banner {
-      background-color: #F7E146;
-      color: #000;
-      padding: 20px 0;
-      text-align: center;
-      font-size: 18px;
-      font-weight: bold;
-    }
+        .footer-content {
+            display: flex;
+            justify-content: space-around;
+            padding: 40px 10%;
+            text-align: left;
+            flex-wrap: wrap;
+            color: #ccc;
+        }
 
-    .promo-banner button {
-      background-color: #000;
-      color: #fff;
-      border: 2px solid #000;
-      padding: 10px 20px;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: bold;
-      margin-top: 10px;
-    }
+        .footer-column {
+            width: 15%;
+            color: #ccc;
+        }
 
-    .footer-content {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      padding: 40px 5%;
-    }
+        .footer-column h3 {
+            font-size: 14px;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
 
-    .footer-column {
-      width: 150px;
-      margin-bottom: 20px;
-    }
+        .footer-column ul {
+            list-style: none;
+            padding: 0;
+        }
 
-    .footer-column h3 {
-      font-size: 14px;
-      margin-bottom: 10px;
-    }
+        .footer-column ul li {
+            font-size: 13px;
+            margin-bottom: 8px;
+            cursor: pointer;
+        }
 
-    .footer-column ul {
-      list-style: none;
-      padding: 0;
-    }
+        .footer-column ul li a {
+            color: #ccc;
+            text-decoration: none;
+        }
 
-    .footer-column ul li {
-      font-size: 13px;
-      margin-bottom: 8px;
-      cursor: pointer;
-    }
+        .footer-column ul li a:hover {
+            text-decoration: underline;
+        }
 
-    .footer-column ul li:hover {
-      text-decoration: underline;
-    }
+        .footer-column.social {
+            text-align: left;
+        }
 
-    .footer-bottom {
-      background-color: #1a1a1a;
-      text-align: center;
-      padding: 15px 0;
-      font-size: 12px;
-    }
+        .footer-column.social a {
+            color: #ccc;
+            text-decoration: none;
+        }
 
+        .footer-column.social a:hover {
+            text-decoration: underline;
+        }
+
+        .footer-bottom {
+            background-color: #1a1a1a;
+            padding: 15px 0;
+            font-size: 12px;
+            color: #ccc;
+        }
+
+        .icons {
+            display: flex;
+            align-items: center;
+            gap: 1px;
+            height: 40px;
+            width: auto;
+        }
+
+        .icons img {
+            height: 30px;
+            width: 30px;
+            object-fit: contain;
+        }
+
+        .collection-heading {
+            text-align: center;
+            font-size: 3em;
+            margin: 40px 0 20px;
+            color: white;
+            background-color: #000;
+        }
     
   </style>
 </head>
