--- a/basketball_product3.html
+++ b/basketball_product3.html
@@ -308,36 +308,30 @@
 </head>
 <body style="background-color: white;">
   <div class="header">
-    <div class="help-signup">
-        <a href="#">Help</a>
-        <a href="#">Orders and Returns</a>
-        <a href="#">Log In</a>
-    </div>
-    <div class="logo">
-        <img src="fav.jpeg" alt="Athletix">
-    </div>
-    <div class="nav-menu">
-        <a href="#">Shoes</a>
-        <a href="#">Men</a>
-        <a href="#">Women</a>
-        <a href="#">Kids</a>
-        <a href="#">Sports</a>
-        <a href="#">Lifestyle</a>
-        <a href="#">Outlet</a>
-    </div>
-    <div class="search-bar">
-        <input type="text" placeholder="Search">
-        <img src="search-icon.png" alt="Search">
-    </div>
-    <div class="icons">
-        <div class="notification">
-            <img src="user-icon.png" alt="User Icon">
-            <div class="notification-badge">1</div>
+        <div class="header-left">
+            <div class="logo">
+                <a href="homepage.html">
+                    <img src="logo.jpeg" alt="Athletix">
+                </a>
+            </div>
+            <div class="nav-menu">
+                <a href="men_athletix.html">Men</a>
+                <a href="women_athletix.html">Women</a>
+                <a href="kids_athletix.html">Kids</a>
+                <a href="shoes_athletix.html">Shoes</a>
+            </div>
         </div>
-        <img src="favorites-icon.png" alt="Favorites">
-        <img src="cart-icon.png" alt="Cart">
+        <div class="help-signup">
+            <a href="#">Help</a>
+            <a href="#">Orders</a>
+            <a href="#">Log In</a>
+            <div class="logo">
+                <a href="cart.html">
+                    <img src="cart.jpeg" alt="Cart" class="cart-icon">
+                </a>
+            </div>
+        </div>
     </div>
-  </div>
   
   <div class="container">
     <button class="back-btn" onclick="history.back()">← Back to Catalogue</button>
