--- a/homepage.html
+++ b/homepage.html
@@ -246,8 +246,8 @@
         </div>
         <div class="help-signup">
             <a href="help.html">Help</a>
-            <a href="#">Orders</a>
-            <a href="signup.html">Log In</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -260,8 +260,9 @@
         <div class="text-content">
             <h1>SUPERSTAR</h1>
             <p>A streetwear staple, from the basketball court to the street.</p>
-            <a href="#">Shop Originals</a>
-            <a href="#">Shop Superstar</a>
+            <a href="basketball_athletix.html">Shop NBA</a>
+            <a href="football_athletix.html">Shop FIFA</a>
+            <a href="cricket_athletix.html">Shop ICC</a>
         </div>
         <div class="image-content">
             <img src="logo.jpeg" width="250px" height="250px" alt="Athletix">
@@ -271,21 +272,21 @@
     <div class="product-grid">
         <div class="product-card">
             <a href="men_product2.html">
-                <img src="product2.jpg" alt="Training Shoes">
+                <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/bba09c80cdf3416c9957d5ea0dee0738_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM1.jpg" alt="Training Shoes">
                 <h3>Real Madrid 99/00 Home Jersey</h3>
             </a>
             <p>₹5,299</p>
         </div>
         <div class="product-card">
-            <a href="men_product3.html">
-                <img src="product3.jpg" alt="Casual Shoes">
+            <a href="basketball_product1.html">
+                <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/14287f1a-096a-4dae-9a31-0416f34e95de/LEBRON+XXII+EP.png" alt="Casual Shoes">
                 <h3>Manchester United UBP Tee</h3>
             </a>
             <p>₹3,999</p>
         </div>
         <div class="product-card">
-            <a href="men_product4.html">
-                <img src="product4.jpg" alt="High Tops">
+            <a href="football_product5.html">
+                <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/704fa294-9e65-42c1-9716-024d2996aaff/SIG+ATHLETE+-+SU25.png" alt="High Tops">
                 <h3>High-Top Sneakers</h3>
             </a>
             <p>₹4,799</p>
@@ -315,7 +316,7 @@
     <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
-            <button  onclick=login&signup.html>Sign Up for Free →</button>
+            <button  onclick= login&signup.html >Sign Up for Free →</button>
         </div>
         <div class="footer-content">
             <div class="footer-column">
