--- a/shoes_athletix.html
+++ b/shoes_athletix.html
@@ -285,66 +285,66 @@
         <div class="product-grid">
             <div class="product-card">
                 <a href="shoes_product1.html">
-                    <img src="product1.jpg" alt="Running Shoes">
-                    <h3>Men's Running Shoes</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/c76b9dce-ba97-4f1e-b7ad-b6c6d5155451/ZOOM+FLY+6+JI.png" alt="Running Shoes">
+                    <h3>Nike Zoom Fly Men's Running Shoes</h3>
                 </a>
-                <p>₹6,499</p>
+                <p> ₹16,995.00</p>
             </div>
             <div class="product-card">
                 <a href="shoes_product2.html">
-                    <img src="product2.jpg" alt="Training Shoes">
-                    <h3>Training Sneakers</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/9f79fa8d-3a58-44ce-b823-c6936ccc65fc/M+AIR+MAX+ALPHA+TRAINER+6.png" alt="Training Shoes">
+                    <h3>Nike Air Max Men's Workout Shoes</h3>
                 </a>
-                <p>₹5,299</p>
+                <p> ₹8,495.00</p>
             </div>
             <div class="product-card">
                 <a href="shoes_product3.html">
-                    <img src="product3.jpg" alt="Casual Shoes">
-                    <h3>Classic Casuals</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/f90a69fc-1b25-41de-b008-34a791214918/NIKE+DUNK+LOW+RETRO.png" alt="Casual Shoes">
+                    <h3>Nike Dunk Low Retro</h3>
                 </a>
-                <p>₹3,999</p>
+                <p> ₹8,695.00</p>
             </div>
             <div class="product-card">
                 <a href="shoes_product4.html">
-                    <img src="product4.jpg" alt="High Tops">
-                    <h3>High-Top Sneakers</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/5e7687f1-c13e-4bac-8ffa-a6f863ae9157/NIKE+DUNK+HI+RETRO.png" alt="High Tops">
+                    <h3>Nike Dunk High</h3>
                 </a>
-                <p>₹4,799</p>
+                <p>₹10,253.33</p>
             </div>
             <div class="product-card">
                 <a href="shoes_product5.html">
-                    <img src="product5.jpg" alt="Sliders">
-                    <h3>Comfort Sliders</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/eaebde97-43f2-4113-ba45-d544a3822367/NIKE+CALM+SLIDE.png" alt="Sliders">
+                    <h3>Nike Calm Sliders</h3>
                 </a>
-                <p>₹1,499</p>
+                <p> ₹3,895.00</p>
             </div>
             <div class="product-card">
                 <a href="shoes_product6.html">
-                    <img src="product6.jpg" alt="Cricket Shoes">
-                    <h3>Cricket Spikes</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/84288f23-ed0e-4851-90e6-34601af59510/ARZM+INFNTY+TRNXT%252+NRG+AGST+W.png" alt="Cricket Shoes">
+                    <h3>Nike Infinity Golf Shoes</h3>
                 </a>
-                <p>₹5,999</p>
+                <p> ₹17,495.00</p>
             </div>
             <div class="product-card">
                 <a href="shoes_product7.html">
-                    <img src="product7.jpg" alt="Gym Trainers">
-                    <h3>Gym Trainers</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/570d57c2-9685-4404-9678-4786da52d328/ZM+VAPOR+16+ELITE+AM+95+SE+FG.png" alt="Gym Trainers">
+                    <h3>Nike Mercurial Vapor 16 Elite x Air Max</h3>
                 </a>
-                <p>₹4,299</p>
+                <p> ₹27,095.00</p>
             </div>
             <div class="product-card">
                 <a href="shoes_product8.html">
-                    <img src="product8.jpg" alt="Basketball Shoes">
-                    <h3>Basketball Shoes</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d2c71a07-0e1b-4362-bc8f-38952ce8f53b/G.T.+CUT+3+TURBO+EP.png" alt="Basketball Shoes">
+                    <h3>Nike G.T. Basketball Shoes</h3>
                 </a>
-                <p>₹6,799</p>
+                <p> ₹18,395.00</p>
             </div>
             <div class="product-card">
                 <a href="shoes_product9.html">
-                    <img src="product9.jpg" alt="Formal Sneakers">
-                    <h3>Urban Formal Sneakers</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/e783e052-9360-4afb-adb8-c4e9c0f5db07/NIKE+AIR+MAX+NUAXIS.png" alt="Formal Sneakers">
+                    <h3>Nike Air Max Nuaxis</h3>
                 </a>
-                <p>₹3,499</p>
+                <p> ₹8,495.00</p>
             </div>
         </div>
     </div>
