--- a/shoes_product2.html
+++ b/shoes_product2.html
@@ -339,21 +339,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/skwgyqrbfzhu6uyeh0gg/air-max-270-mens-shoes-KkLcGR.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/9f79fa8d-3a58-44ce-b823-c6936ccc65fc/M+AIR+MAX+ALPHA+TRAINER+6.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/skwgyqrbfzhu6uyeh0gg/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/9f79fa8d-3a58-44ce-b823-c6936ccc65fc/M+AIR+MAX+ALPHA+TRAINER+6.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fd9d515a-00f9-4e08-95df-53b807dfa24e/M+AIR+MAX+ALPHA+TRAINER+6.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/2792fdef-9e6b-475a-9c2f-1f213e9c9c01/M+AIR+MAX+ALPHA+TRAINER+6.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/a5265394-2f00-4e7e-a263-f9b9d78ee736/M+AIR+MAX+ALPHA+TRAINER+6.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Max 270</h1>
-        <h2>$129.99</h2>
+        <h1>Nike Air Max Men's Workout Shoes</h1>
+        <h2> ₹8495.00</h2>
 
-        <p><strong>Description:</strong> The Nike Air Max 270 delivers a fresh take on the iconic Air Max series with its large Air unit in the heel for all-day comfort. The breathable mesh upper provides lightweight support.</p>
+        <p><strong>Description:</strong> Train hard, stay comfortable. The Nike Air Max Workout Shoes combine classic cushioning with durable support, giving you stability, style, and all-day comfort for every rep and run.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -368,7 +368,7 @@
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="302" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="302" data-name="Nike Air Max Men's Workout Shoes" data-price="₹8495.00">
   		        Add to Bag
 	        </button>
         </div>
